--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -72,7 +72,7 @@ jobs:
       uses: klever1988/cachewrtbuild@main
       with:
        ccache: 'true'
-       clean:  'true'  # 'false'
+       clean:  'false'  # 'true'
        prefix: ${{ github.workspace }}/openwrt
     
     
