--- a/.diffconfig
+++ b/.diffconfig
@@ -29,8 +29,10 @@ CONFIG_PACKAGE_luci-app-openclash=y
 CONFIG_PACKAGE_luci-app-passwall=y
 CONFIG_PACKAGE_luci-app-passwall_Iptables_Transparent_Proxy=y
 CONFIG_PACKAGE_luci-compat=y
+CONFIG_PACKAGE_luci-i18n-luci-romupdate-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-nps-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
+CONFIG_PACKAGE_luci-romupdate=y
 CONFIG_PACKAGE_luci-theme-argonn=y
 CONFIG_PACKAGE_npc=y
 CONFIG_PACKAGE_ruby=y
