--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -103,6 +103,11 @@ jobs:
         git pull --depth 1 origin master
         git branch --set-upstream-to=origin/master 
     
+    - name: luci-app-romupdate
+      run: |
+        cd openwrt/package
+        git clone https://github.com/Blueplanet20120/luci-romupdate.git
+        
     - name: lenyu
       run: |
         cd openwrt 
