--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -106,7 +106,7 @@ jobs:
     - name: luci-app-romupdate
       run: |
         cd openwrt/package
-        git clone https://github.com/Blueplanet20120/luci-romupdate.git
+        git https://github.com/Blueplanet20120/luci-app-romupdate.git
         
     - name: lenyu
       run: |
